--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -632,9 +632,9 @@
     <tr>
       <td>targetClass</td>
       <td>rdfs:Class</td>
-      <td>Is tyhis is specified, it be used to replace any occuurences of
+      <td>Is tyhis is specified, it be used to replace any occurrences of
          "$(targetClass)" in the query template.  this allows different instances
-         of AutocompleteField to share the same DatSource, by specifying different values for <tt>targetClass</tt>.</td>
+         of AutocompleteField to share the same DataSource, by specifying different values for <tt>targetClass</tt>.</td>
     </tr>
 
   </table>
