Apply suggestions from code review
Thanks @bourgeoa - typos

Co-authored-by: Alain Bourgeois <alain.bourgeois10@gmail.com>

--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -276,7 +276,7 @@
         <td>
           Setting this flag (on a single form field not a structure) means that when the user is just reading the data, not
           editing it, the fields with blank data will be removed completely.
-          This avoid things like a blank field for a region in an address hen there isn't one given.
+          This avoid things like a blank field for a region in an address when there isn't one given.
           This can make the UX much cleaner.  Defaults to false.
         </td>
       </tr>
@@ -489,7 +489,7 @@
       <tr>
         <td>property</td>
         <td>rdf:Property</td>
-        <td>The API details or query endpint and query details to be usde to search of the itemn in
+        <td>The API details or query endpoint and query details to be used to search the item in
           the databasse.</td>
       </tr>
       <tr>
