--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -250,7 +250,7 @@ ui:property ex:allDay .
     <td>null</td>
 
     <td>used to be the is a DOM element to contain the form. If given, the form will be
-    appended to it. This use is deprocated.</td>
+    appended to it. This use is deprecated.</td>
   </tr>
 
   <tr>
