code improvements after authn move

--- a/examples/header/index.html
+++ b/examples/header/index.html
@@ -5,8 +5,7 @@
   <meta charset='UTF-8'>
   <title>solid-ui UI.widgets.header examples page</title>
   <script type="text/javascript" src="../../lib/webpack-bundle.js"></script>
-  <script type="text/javascript" src="../../lib/authn/authn.js"></script>
-  <script>
+  <script type="text/javascript" src="../../lib/index.js"></script>  <script>
     const $ = document.querySelector.bind(document)
     function showSource(widgetName) {
       $(`#viewSource-${widgetName}`).innerHTML = $(`#script-${widgetName}`).innerText
@@ -25,11 +24,11 @@
     <div id="webId"></div>
     <div id="loginBanner"></div>
     <script>
-      loginBanner.appendChild(authn.loginStatusBox(document, null, {}));
+      loginBanner.appendChild(UI.login.loginStatusBox(document, null, {}));
 
       async function finishLogin() {
-        await authn.authSession.handleIncomingRedirect();
-        const session = authn.authSession;
+        await UI.solidLogicLib.authSession.handleIncomingRedirect();
+        const session = UI.solidLogicLib.authSession;
         if (session.info.isLoggedIn) {
           // Update the page with the status.
           webId.innerHTML = "Logged in as: " + authn.currentUser().uri;
@@ -82,7 +81,7 @@
     window.addEventListener('DOMContentLoaded', async () => {
       try {
         options = { menuList: [{ label: "Testing Button", onclick: () => { alert('hello') } }, { label: "Testing Link", url: 'https://reflectechblog.wordpress.com/' }] }
-        await UI.initHeader(UI.store, options)
+        await UI.initHeader(UI.solidLogicLib.store, options)
       } catch (error) {
         window.alert(`Error loading header. You need to have a div with id = PageHeader on your page.`)
       }
