--- a/examples/header/index.html
+++ b/examples/header/index.html
@@ -27,8 +27,8 @@
       loginBanner.appendChild(UI.login.loginStatusBox(document, null, {}));
 
       async function finishLogin() {
-        await UI.solidLogicLib.authSession.handleIncomingRedirect();
-        const session = UI.solidLogicLib.authSession;
+        await UI.authSession.handleIncomingRedirect();
+        const session = UI.authSession;
         if (session.info.isLoggedIn) {
           // Update the page with the status.
           webId.innerHTML = "Logged in as: " + authn.currentUser().uri;
@@ -81,7 +81,7 @@
     window.addEventListener('DOMContentLoaded', async () => {
       try {
         options = { menuList: [{ label: "Testing Button", onclick: () => { alert('hello') } }, { label: "Testing Link", url: 'https://reflectechblog.wordpress.com/' }] }
-        await UI.initHeader(UI.solidLogicLib.store, options)
+        await UI.initHeader(UI.store, options)
       } catch (error) {
         window.alert(`Error loading header. You need to have a div with id = PageHeader on your page.`)
       }
