changed old links

--- a/Documentation/form-ecosystem.html
+++ b/Documentation/form-ecosystem.html
@@ -112,7 +112,7 @@
     <p>
       The User Interface ontology at <tt>http://www.w3.org/ns/ui</tt> defines
       RDF terms for describing forms. The
-      <tt><a href="https://github.com/solid/solid-ui">solid-ui</a></tt> project
+      <tt><a href="https://github.com/solidos/solid-ui">solid-ui</a></tt> project
       provides functions to use these forms within your web application to
       create a quick user interface solution. <a href="forms-intro.html">An introduction</a>
       basically describes how forms work. This document describes how forms fit into the ecosystem of apps,
