--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -114,7 +114,7 @@
     <p>
       The User Interface ontology at <tt>http://www.w3.org/ns/ui</tt> defines
       RDF terms for describing forms. The
-      <tt><a href="https://github.com/solid/solid-ui">solid-ui</a></tt> project
+      <tt><a href="https://github.com/solidos/solid-ui">solid-ui</a></tt> project
       provides functions to use these forms within your web application to
       create a quick user interface solution. This document describes how.
     </p>
@@ -212,7 +212,7 @@
 
       <li>
         <a
-          href="https://github.com/solid/solid-ui/blob/main/src/widgets/forms.js"
+          href="https://github.com/solidos/solid-ui/blob/main/src/widgets/forms.js"
         >
           The implementation code</a
         >
