--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8" />
     <title>solid-ui UI.widgets.buttons examples page</title>
-    <meta http-equiv="refresh" content="0; url=https://solid.github.io/solid-ui/examples/storybook/" />
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://solidos.github.io/solid-ui/examples/storybook/"
+    />
   </head>
   <body>
-  <h1>These examples have moved to storybook</h1>
-  <a href="https://solid.github.io/solid-ui/examples/storybook/">https://solid.github.io/solid-ui/examples/storybook/</a>
+    <h1>These examples have moved to storybook</h1>
+    <a href="https://solidos.github.io/solid-ui/examples/storybook/"
+      >https://solidos.github.io/solid-ui/examples/storybook/</a
+    >
   </body>
 </html>
