--- a/examples/error/index.html
+++ b/examples/error/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset='UTF-8'>
+  <head>
+    <meta charset="UTF-8" />
     <title>solid-ui UI.widgets.error examples page</title>
-    <meta http-equiv="refresh" content="0; url=https://solid.github.io/solid-ui/examples/storybook/?path=/docs/display--error-message-block" />
-</head>
-<body>
-<h1>These examples have moved to storybook</h1>
-<a href="https://solid.github.io/solid-ui/examples/storybook/?path=/docs/display--error-message-block">https://solid.github.io/solid-ui/examples/storybook/?path=/docs/display--error-message-block</a>
-</body>
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/display--error-message-block"
+    />
+  </head>
+  <body>
+    <h1>These examples have moved to storybook</h1>
+    <a
+      href="https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/display--error-message-block"
+      >https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/display--error-message-block</a
+    >
+  </body>
 </html>
