--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset='UTF-8'>
-  <title>solid-ui UI.widgets.forms examples page</title>
-  <meta http-equiv="refresh" content="0; url=https://solid.github.io/solid-ui/examples/storybook/?path=/docs/forms-appendform--trivial-comment-field" />
-</head>
-<body>
-<h1>These examples have moved to storybook</h1>
-<a href="https://solid.github.io/solid-ui/examples/storybook/?path=/docs/forms-appendform--trivial-comment-field">https://solid.github.io/solid-ui/examples/storybook/?path=/docs/forms-appendform--trivial-comment-field</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>solid-ui UI.widgets.forms examples page</title>
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/forms-appendform--trivial-comment-field"
+    />
+  </head>
+  <body>
+    <h1>These examples have moved to storybook</h1>
+    <a
+      href="https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/forms-appendform--trivial-comment-field"
+      >https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/forms-appendform--trivial-comment-field</a
+    >
+  </body>
 </html>
