--- a/examples/draganddrop/index.html
+++ b/examples/draganddrop/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset='UTF-8'>
+  <head>
+    <meta charset="UTF-8" />
     <title>solid-ui UI.widgets.draganddrop examples page</title>
-    <meta http-equiv="refresh" content="0; url=https://solid.github.io/solid-ui/examples/storybook/?path=/docs/drag-drop--draggable" />
-</head>
-<body>
-<h1>These examples have moved to storybook</h1>
-<a href="https://solid.github.io/solid-ui/examples/storybook/?path=/docs/drag-drop--draggable">https://solid.github.io/solid-ui/examples/storybook/?path=/docs/drag-drop--draggable</a>
-</body>
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/drag-drop--draggable"
+    />
+  </head>
+  <body>
+    <h1>These examples have moved to storybook</h1>
+    <a href="https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/drag-drop--draggable"
+      >https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/drag-drop--draggable</a
+    >
+  </body>
 </html>
