--- a/examples/notepad/index.html
+++ b/examples/notepad/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset='UTF-8'>
-  <title>solid-ui UI.pad examples page</title>
-  <meta http-equiv="refresh" content="0; url=https://solid.github.io/solid-ui/examples/storybook/?path=/docs/notepad--notepad" />
-</head>
-<body>
-<h1>These examples have moved to storybook</h1>
-<a href="https://solid.github.io/solid-ui/examples/storybook/?path=/docs/notepad--notepad">https://solid.github.io/solid-ui/examples/storybook/?path=/docs/notepad--notepad</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>solid-ui UI.pad examples page</title>
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/notepad--notepad"
+    />
+  </head>
+  <body>
+    <h1>These examples have moved to storybook</h1>
+    <a href="https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/notepad--notepad"
+      >https://solidos.github.io/solid-ui/examples/storybook/?path=/docs/notepad--notepad</a
+    >
+  </body>
 </html>
